# porfolio-sftp-data-engineering-project

./: .gitignore  README.md  main.py  pyproject.toml
output/: data_20260408_222725.csv  data_20260428_123957_part1.csv  data_20260428_123957_part2.csv  data_20260428_123957_part3.csv  data_20260428_123957_part4.csv
src/extractor/: extractor.py
src/loader/: sftp_loader.py
src/serializer/: csv_serializer.py
